# inariwatch-capture

./: .gitignore  BUNDLE_BUDGET.md  CHANGELOG.md  P2P_DESIGN.md  PAYLOAD_V2_SPEC.md  README.md  package-lock.json  package.json  tsconfig.json
ci/: bundle-size.json
csharp/: InariWatch.Capture.csproj  README.md
csharp/Tests/: CaptureTest.cs  DsnTest.cs  FingerprintGoldenVectorsTest.cs  InariWatch.Capture.Tests.csproj  ScopeTest.cs
csharp/src/: AspNetCoreMiddleware.cs  Breadcrumbs.cs  Capture.cs  Dsn.cs  Fingerprint.cs  Hmac.cs  Scope.cs  Types.cs
docs/decisions/: 0001-lazy-redact.md  0002-lazy-intent.md
go/: README.md  auto.go  breadcrumbs.go  breadcrumbs_test.go  client.go  client_test.go  environment.go  fingerprint.go  fingerprint_test.go  git.go  go.mod  scope.go  scope_test.go  transport.go  transport_test.go  types.go
go/auto/: auto.go
go/middleware/: README.md
go/middleware/chi/: middleware.go
go/middleware/gin/: middleware.go
go/middleware/nethttp/: middleware.go  middleware_test.go
java/: README.md  pom.xml
java/src/main/java/com/inariwatch/capture/: Breadcrumbs.java  Capture.java  Config.java  Dsn.java  ErrorEvent.java  Fingerprint.java  Hmac.java  Scope.java  Transport.java
java/src/main/java/com/inariwatch/capture/intent/: IntentShape.java  IntentSource.java  Records.java
python/: .coverage  README.md  pyproject.toml
python/examples/advanced/: app.py
python/examples/basic/: app.py
python/examples/django/: README.md
python/examples/fastapi/: app.py
python/src/inariwatch_capture/: __init__.py  auto.py  breadcrumbs.py  client.py  environment.py  fingerprint.py  forensic.py  git.py  monitoring.py  scope.py  transport.py  types.py
python/src/inariwatch_capture/integrations/: __init__.py  django.py  fastapi.py  flask.py  logging.py
python/src/inariwatch_capture/intent/: __init__.py  pydantic.py  types.py
python/tests/: conftest.py  test_additional.py  test_breadcrumbs.py  test_client.py  test_fingerprint.py  test_forensic.py  test_integrations.py  test_intent_pydantic.py  test_monitoring.py  test_scope.py  test_transport.py
rust/: Cargo.toml  README.md
rust/src/: axum.rs  breadcrumbs.rs  client.rs  environment.rs  fingerprint.rs  git.rs  lib.rs  regex_set.rs  scope.rs  transport.rs  types.rs
rust/src/intent/: mod.rs  serde_src.rs  types.rs
rust/tests/: breadcrumbs.rs  client.rs  fingerprint.rs  intent_serde.rs  scope.rs  transport.rs
scripts/: measure-bundle.mjs  render-bundle-diff.mjs
src/: auto.ts  breadcrumbs.ts  browser.ts  cli.ts  client-entry.ts  client.ts  environment.ts  fingerprint.ts  fulltrace.ts  git.ts  index.ts  payload-v2.ts  payload-version.ts  precursors.ts  scope.ts  session.ts  setup-inserters.ts  signing.ts  source-context.ts  tombstone.ts  transport.ts  types.ts  v2-budget.ts  v2-emit.ts
src/agent/: agent.ts  index.ts  integration.ts  openai.ts  tools.ts
src/awake/: broken-resources.ts  dom-size.ts  hydration.ts  image-optimizer.ts  index.ts  loaf.ts  memory-leak.ts  rage-clicks.ts  resource-audit.ts  spa-routing.ts  storage-quota.ts  utils.ts  web-vitals.ts
src/browser-v2/: auto-instrument.ts  auto.ts  client.ts  dsn.ts  fingerprint.ts  hmac.ts  index.ts  scope.ts  session.ts  transport.ts  types.ts
src/causal/: data-flow.ts  graph.ts  hooks-drizzle.ts  hooks-http.ts  hooks-pg.ts  hooks-prisma.ts  hooks-redis.ts  index.ts
src/cli/: doctor.ts
src/edge/: agent.ts  auto.ts  browser-v2-auto.ts  browser-v2.ts  browser.ts  client-entry.ts  feedback.ts  fleet.ts  forensic.ts  index.ts  noop.ts  performance.ts  shield.ts
src/edge/plugins/: next.ts  nuxt.ts  vite.ts  webpack.ts
src/feedback/: index.ts  widget.ts
src/fleet/: bloom.ts  client.ts  index.ts  integration.ts
src/forensic/: fallback-inspector.ts  fork-bridge.ts  index.ts  integration.ts  msgpack-decoder.ts  serialize.ts  session-file.ts  types.ts
src/integrations/: nextjs.ts
src/intent/: compiler.ts  index.ts  types.ts
src/intent/sources/: drizzle.ts  graphql.ts  openapi.ts  prisma.ts  typescript.ts  zod.ts
src/mcp/: index.ts  server.ts
src/p2p/: client.ts  index.ts  relay.ts  server-cf.ts  transport-memory.ts  transport-ws.ts  transport.ts
src/performance/: index.ts
src/plugins/: debug-id.ts  next.ts  nuxt.ts  vite.ts  webpack-debug-id-plugin.ts  webpack.ts
src/redact/: config.ts  hash.ts  index.ts  keys.ts  luhn.ts  patterns.ts
src/shield/: detect.ts  index.ts  sinks.ts  sources.ts  taint.ts
