[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "inariwatch-capture"
version = "0.1.0"
description = "Lightweight error capture SDK for InariWatch — zero runtime dependencies, Python 3.12+ with PEP 669 forensics."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jesus Bernal", email = "info@jesusbr.com" }]
requires-python = ">=3.12"
keywords = ["error-tracking", "monitoring", "inariwatch", "capture", "sentry-alternative", "fastapi", "django", "flask"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
fastapi = ["starlette>=0.27"]
flask = ["flask>=2.0"]
django = ["django>=4.2"]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "requests>=2.31",
  "starlette>=0.27",
  "flask>=3.0",
]

[project.urls]
Homepage = "https://inariwatch.com/docs#int-capture"
Repository = "https://github.com/orbita-pos/inariwatch-capture"
Issues = "https://github.com/orbita-pos/inariwatch-capture/issues"
Documentation = "https://inariwatch.com/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/inariwatch_capture"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
]

[tool.coverage.run]
source = ["src/inariwatch_capture"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
